--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -3,4 +3,14 @@
   height: 100%;
   justify-content: flex-end;
   align-items: center;
+  @extend .nav-item;
+
+  a {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
 }
