--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,7 +1,7 @@
 .fixed-layout {
   position: fixed;
   width: 100%;
-  max-height: $fixed-min-height;
+  //max-height: $fixed-min-height;
   overflow: scroll;
 }
 
