list item initial

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,10 @@
 /* Colors */
 $orange: #F78536;
 $body: #092734;
+$body-light: #F2F2F2;
 $body-font-dark: #DFEBED;
 $white: #ffffff;
+$blue-dark: #13465D;
 
 /* Layout */
 $fixed-min-height: 96px;
