--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,3 +1,11 @@
 #main {
   background-color: $body;
 }
+
+.page-header {
+  text-align: center;
+  width: 100%;
+  > .title {
+    text-align: center;
+  }
+}
