--- a/src/styles/_list.scss
+++ b/src/styles/_list.scss
@@ -33,6 +33,12 @@ $item-height: 274px;
     margin-left: 1.618em;
     margin-right: 1em;
   }
+  &.loading-bar {
+    flex: 100%;
+    font-size: .618em;
+    color: $body-light;
+    background-color: transparent;
+  }
 }
 
 .resource-tag {
