--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -5,9 +5,10 @@
 .page-header {
   text-align: center;
   width: 100%;
+
   > .title {
     text-align: center;
     line-height: 1.2em;
-    margin: 1em 0;
+    margin: .618em 0 1em 0;
   }
 }
