--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,14 +1,16 @@
 #main {
   background-color: $body;
 }
-
 .page-header {
   text-align: center;
-  width: 100%;
-
+  width: 83.2%;
+  margin: .618em 0 1em 0;
   > .title {
     text-align: center;
     line-height: 1.2em;
-    margin: .618em 0 1em 0;
+  }
+  > .subtitle {
+    font-size: 1.618em;
+    font-weight: 300;
   }
 }
