--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -14,3 +14,13 @@
     font-weight: 300;
   }
 }
+
+.filter-input {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid $white;
+  font-size: 1.618em;
+  color: $white;
+  padding: .382em;
+  outline: none;
+}
