--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -24,3 +24,12 @@
   padding: .382em;
   outline: none;
 }
+
+.select-input {
+  border: 0;
+  margin-left: .618em;
+  color: $white;
+  background-color: transparent;
+  border-radius: 0;
+  outline: none;
+}
