responsive menu and scroll to top

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -5,7 +5,7 @@
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    > ul {
+    > .desktop-menu {
       display: flex;
       flex-flow: row wrap;
       list-style: none;
